# job_manager_client

./: .env  .env.example  Dockerfile.test  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
src/job_manager_client/: __init__.py  job_status.py  worker.py
src/job_manager_client/utils/: connections.py
tests/: test_basic.py  test_connections.py  test_simple.py  test_worker.py
