[metadata]
name = job_manager_client
version = 0.0.1
description = Client for job manager to update statuses and execute jobs
author = Matt Peters
license = MIT
classifiers =
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.10
    Intended Audience :: Developers
    Topic :: System :: Logging
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = job_manager_client
package_dir =
    job_manager_client = src/job_manager_client
python_requires = >=3.10
install_requires =
    redis>=5.2.0
    rq>=2.0.0

[options.package_data]
job_manager_client = ["py.typed"]

[options.extras_require]
dev =
    python-dotenv>=0.21.0
    pytest>=7.0.0
    pytest-cov>=4.0.0
